force-app/main/default/objects/Mileage_Rate_Setting__c/Mileage_Rate_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Program specific sorting and default values for reimbursement item mileage rates.</description>
    <label>Mileage Rate Settings</label>
</CustomObject>