force-app/main/default/objects/Mileage_Rate_Setting__c/fields/Default_Rate__c.field-meta.xml
<CustomField>
    <fullName>Default_Rate__c</fullName>
    <description>The default rate populated upon adding a new reimbursement item.  Must be either &quot;Max&quot;, &quot;Min&quot;, or left blank for no default rate.</description>
    <inlineHelpText>The default rate populated upon adding a new reimbursement item.  Must be either &quot;Max&quot;, &quot;Min&quot;, or left blank for no default rate.</inlineHelpText>
    <label>Default Rate</label>
    <length>4</length>
    <type>Text</type>
</CustomField>