force-app/main/default/objects/Mileage_Rate_Setting__c/fields/Sort_Ascending_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Ascending_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sort values from low to high.  Ex :  10.0, 20.0, 30.0, 40.0, 50.0 57.5.</description>
    <inlineHelpText>Sort values from low to high.  Ex :  10.0, 20.0, 30.0, 40.0, 50.0 57.5.</inlineHelpText>
    <label>Sort Ascending Order</label>
    <type>Checkbox</type>
</CustomField>